<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/si_about"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/logo_si"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/description_si"
            android:src="@drawable/si" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/unipar_about"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/logo_unipar"
            android:layout_width="250dp"
            android:layout_height="215dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/description_si"
            android:src="@drawable/unipar" />

        <TextView
            android:id="@+id/textViewAluno1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aluno1"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textViewAluno2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aluno2"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textAluno3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aluno3"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textViewAluno4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aluno4"
            android:textSize="19sp" />
    </LinearLayout>

</ScrollView>